Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14832

QML syntax error messages not clickable on Android

XMLWordPrintable

      1. Create a new Qt Quick Application project.
      2. Insert a syntax error into the project's QML file.
      3. Run this on an Android device.
        You'll see a message about the syntax error, e.g.:
        W/libuntitled601.so(10541): qrc:/main.qml:10 ((null)): qrc:/main.qml:10: TypeError: Property 'qurit' of object [object Object] is not a function
        

        You can't the click the error message so you'll have to find the wrong code yourself.

      When running the application on the desktop, the file name and line number will be underlined. Clicking this will open the respective code location. This should work when running on an Android device, too.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes