Fix detection of qml runtime error messages on Android

On Android those messages are prepended by e.g. W/libuntitled156.
Adjust the regexp to also match in the middle of the line.

Change-Id: Idd2ed8f4de8f4070da4fc673051eb29efe72fa66
Task-number: QTCREATORBUG-14832
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>